[package]
name = "icymegle"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
strip = true


[dependencies]
iced =  { version = "0.4.2", features = ["tokio", "glow"] }
omegalul = {git = "https://github.com/Maxty99/omegalul-rs", rev = "4cf8a88131a79d13331f452629a01e23efe51586"}
iced_native = "0.5.1"
dark-light = "0.2.2"